[package]
name = "sandsim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13.1", features = ["dynamic_linking"]}
bevy-inspector-egui = "0.23.4"
hexx = { version = "0.16.1", features = ["bevy_reflect"]}
leafwing-input-manager = "0.13.3"
noisy_bevy = "0.6.0"
pathfinding = "4.9.1"
rand = { version = "0.8.5", features = ["small_rng"] }

[profile.dev]
opt-level = 1
incremental = true

[profile.dev.package."*"]
opt-level = 3
