[package]
name = "sandsim"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.13.1", features = ["asset_processor"] }
bevy-inspector-egui = "0.24.0"
hexx = { version = "0.17.0", features = ["bevy_reflect"]}
leafwing-input-manager = "0.13.3"
noisy_bevy = "0.6.0"
pathfinding = "4.9.1"
rand = { version = "0.8.5", features = ["small_rng"] }
unique-type-id = "1.3.0"
bevy-fps-counter = { version = "0.4.0", optional = true }
bytebuffer = "2.2.0"
rayon = "1.10.0"
bevy_turborand = "0.8.2"

[features]
default = ["fps"]
fps = ["bevy-fps-counter"]

[profile.dev]
opt-level = 1
incremental = true

[profile.dev.package."*"]
opt-level = 3

# Source: https://github.com/bevyengine/bevy/tree/latest/examples#wasm
[profile.wasm-release]
# Use release profile as default values
inherits = "release"

# Optimize with size in mind, also try "s", sometimes it is better.
# This doesn't increase compilation times compared to -O3, great improvements
opt-level = "z"

# Do a second optimization pass removing duplicate or unused code from dependencies.
# Slows compile times, marginal improvements
lto = "fat"

# When building crates, optimize larger chunks at a time
# Slows compile times, marginal improvements
codegen-units = 1
